# grpc-hello-world

./: .gitignore  BUILD  MODULE.bazel  README.md  greeter_callback_client.cc  greeter_callback_server.cc
go/: go.mod  go.sum
go/client/: main.go
go/helloworld/: helloworld.pb.go
protos/: BUILD
