module(name = "dev", version = "1.0")

bazel_dep(name = "grpc", version = "1.66.0.bcr.1", repo_name="com_github_grpc_grpc")
bazel_dep(name = "abseil-cpp", version = "20240722.0")
bazel_dep(name = "rules_proto", version = "6.0.2")
bazel_dep(name = "rules_oci", version = "2.0.0-rc0")
bazel_dep(name = "rules_pkg", version = "1.0.1")
bazel_dep(name = "rules_go", version = "0.50.0")
bazel_dep(name = "gazelle", version = "0.38.0")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")

# Pull needed base image
oci.pull(
    name = "docker_lib_ubuntu",
    image = "docker.io/library/ubuntu",
    platforms = [
        "linux/arm64/v8",
        "linux/amd64",
    ],
    tag = "rolling",
)

# Expose the base image
use_repo(oci, "docker_lib_ubuntu")
